@@ -1,6 +1,8 @@
 2002-06-09  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSObject.m: Implemented and documented -className
+	* Tools/AGSOutput.m: When Verbose = YES log all documentable
+	entities for which no comment text was found.
 
 2002-06-06  Adam Fedor  <fedor@gnu.org>
 
